# imperium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/warnengine/imperium/: ExampleInstrumentedTest.java
app/src/debug/assets/: basic.frag.glsl.spv  basic.vert.glsl.spv  sphere.fbx
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib-old.cpp  native-lib.cpp
app/src/main/java/com/warnengine/imperium/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/warnengine/imperium/: ExampleUnitTest.java
assets/: basic.toml  cube.fbx  deferred.toml  forward.toml  robot.fbx  sphere.fbx
assets/meshes/: bench.fbx  camera.fbx  fucking-plane.fbx
docs/: Resources.md  Shaders.md  WhyOpenGL.md
gradle/wrapper/: gradle-wrapper.properties
libraries/GL/include/glad/: glad.h
libraries/GL/src/: glad.c
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
source/: MyGame.h  main-old.cpp  main.cpp
source/common/: Assert.h  File.cpp  File.h  Log.h
source/core/: List.h  Option.h  Pair.h
source/draft/: rage-quit-gltf
source/loader/: Loader.cpp  Loader.h  MeshLoader.cpp  MeshLoader.h  MeshMerger.cpp  MeshMerger.h  Model.cpp  Model.h  Pch.cpp  TextureLoader.cpp  TextureLoader.h  pch.cpp
source/logic/: Actions.h  CCamera.cpp  CCamera.h  CCollider.cpp  CCollider.h  CDirectionalLight.cpp  CDirectionalLight.h  CMaterial.cpp  CMaterial.h  CMeshInstance.cpp  CMeshInstance.h  CRigidBody.cpp  CRigidBody.h  CTransform.cpp  CTransform.h  CViewport.cpp  CViewport.h  Camera.cpp  Camera.h  Ecs.h  Game.cpp  Game.h  TryHarder.cpp  TryHarder.h
source/render/: Context.cpp  Context.h  Device.h  DeviceDesktop.cpp  DeviceDesktop.h  Resources.cpp  Resources.h
source/render/backend/: Backend.h  BackendVulkan.cpp  BackendVulkan.h  BackendVulkanBuffer.cpp  BackendVulkanCommand.cpp  BackendVulkanDescriptor.cpp  BackendVulkanFrame.cpp  BackendVulkanInfo.cpp  BackendVulkanInit.cpp
source/render/frontend/: Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.h
source/renderer/: Backend.h  BackendAndroid.cpp  BackendAndroid.h  BackendDx.cpp  BackendDx.h  BackendOgl.cpp  BackendOgl.h  BackendOglEs.cpp  BackendOglEs.h  CPUResources.h  Descriptions.h  Device.h  DeviceAndroid.cpp  DeviceAndroid.h  DeviceDesktop.cpp  DeviceDesktop.h  Frame.cpp  Frame.h  GPUResources.h  RenderingPass.cpp  RenderingPass.h
source/shaders/: basic.frag.glsl  basic.vert.glsl  blit-debug.frag.glsl  blit-debug.vert.glsl  blit.frag.glsl  blit.vert.glsl  debug.frag.glsl  debug.vert.glsl  directional-light.frag.glsl  directional-light.vert.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  mesh.frag.glsl  mesh.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
